feat: update markdown style and fix: duplicated slug (#15)
* feat: adjust headings size

* fix: duplicate writeup slug id

* feat: update slug grouping strategy

* fix: update image extended for mdx compatibility

* feat: update new markdown styles

* fix: type name hast Root

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@styles/*": ["./src/styled-system/*"]
-    }
+    },
+    "types": ["@types/hast", "@types/node"]
   }
 }
