--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "astro-expressive-code": "^0.41.1",
     "astro-icon": "^1.1.5",
     "date-fns": "^4.1.0",
+    "github-slugger": "^2.0.0",
+    "hast-util-heading-rank": "^3.0.0",
+    "hast-util-to-string": "^3.0.1",
     "hastscript": "^9.0.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.1",
@@ -40,8 +43,11 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@pandacss/dev": "^0.53.4",
+    "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
-    "lefthook": "^1.11.10"
+    "@types/node": "^22.15.11",
+    "lefthook": "^1.11.10",
+    "vfile": "^6.0.3"
   },
   "pnpm": {
     "executionEnv": {
