--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rehype-slug": "^6.0.0",
     "remark-breaks": "^4.0.0",
     "remark-directive": "^4.0.0",
+    "remark-gemoji": "^8.0.0",
     "remark-image-extended": "file:./remark-image-extended",
     "remark-math": "^6.0.0",
     "sharp": "^0.34.1",
